--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@gltf-transform/extensions": "^3.10.1",
     "@gltf-transform/functions": "^3.10.1",
     "dds-ktx-parser": "^1.0.1",
+    "gl-matrix": "^3.4.3",
     "jimp": "^0.22.12"
   }
 }
